# python-202

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst
examples/: quickstart.py
src/python_cheatsheet_lib/: __init__.py
src/python_cheatsheet_lib/core/: __init__.py  runner.py
src/python_cheatsheet_lib/functional/: __init__.py  higher_order_functions.py
src/python_cheatsheet_lib/idioms/: __init__.py  duck_typing.py  eafp_lbyl.py
src/python_cheatsheet_lib/metaprogramming/: __init__.py  descriptors.py  metaclasses.py
src/python_cheatsheet_lib/oop/: __init__.py  basics.py
src/python_cheatsheet_lib/oop/patterns/: __init__.py  _base.py
src/python_cheatsheet_lib/oop/patterns/behavioral/: __init__.py  chain_of_responsibility.py  command.py  interpreter.py  iterator.py  mediator.py  memento.py  observer.py  state.py  strategy.py  visitor.py
src/python_cheatsheet_lib/oop/patterns/creational/: __init__.py  abstract_factory.py  builder.py  factory_method.py  object_pool.py  prototype.py  singleton.py
src/python_cheatsheet_lib/oop/patterns/structural/: __init__.py  adapter.py  bridge.py  composite.py  decorator.py  facade.py  flyweight.py  proxy.py
src/python_cheatsheet_lib/python_313/: __init__.py  free_threaded_interpreter.py  improved_error_messages.py  jit_experiments.py  type_parameter_syntax.py
src/python_cheatsheet_lib/standards/: __init__.py  async_patterns.py
tests/: __init__.py  test_core.py
tests/test_metaprogramming/: __init__.py  test_descriptors.py
tests/test_patterns/: __init__.py  test_factory.py  test_singleton.py
